Fixes on mobile icons

--- a/src/frontend/styles/_shared/_mobile.styl
+++ b/src/frontend/styles/_shared/_mobile.styl
@@ -14,6 +14,9 @@ mobile_list_item()
     background: #d3d3d3
     color: #484739
     
+.mobile_headphones
+  margin-top: 10px
+    
 body
   min-width: 320px
   
@@ -33,7 +36,7 @@ body
   width: 100%
   top: 0
   left: 0
-  font-size: 19px
+  font-size: 22px
   border-bottom: 2px solid YELLOW
   color: #818181
   position: fixed
